<resources>
    <string name="app_name">Udemy_TheCompleteAndroid14_KotlinDevelopmentMasterclass</string>
    <string name="title_activity_unit_converter_app">UnitConverterApp</string>
    <string name="title_activity_shopping_list_app">ShoppingListApp</string>
    <string name="title_activity_mvvmcounter_app">MVVMCounterApp</string>
    <string name="title_activity_recipe_app">RecipeApp</string>
    <string name="title_activity_navigation_app">NavigationApp</string>
    <string name="title_activity_main_location_app">MainLocationApp</string>
    <string name="title_activity_main_wish_list_app">MainWishListApp</string>
    <string name="title_activity_main_music_app">MainMusicApp</string>
    <string name="quiz_app">Quiz App</string>
    <string name="quiz_app_dash">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name.</string>
    <string name="e_g_john">e.g. John</string>
    <string name="start">Start</string>
    <string name="what_country_does_this_flag_belongs_to">What country does this flag belongs to?</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="apple">Apple</string>
    <string name="submit">Submit</string>
    <string name="finish">FINISH</string>
    <string name="result">Result</string>
    <string name="image">image</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="please_wait">Please Wait...</string>
    <string name="startCapital">START</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="calculate">CALCULATE</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="height_in_cm">Height (In cm)</string>
    <string name="weight_in_kg">Weight (In kg)</string>
    <string name="milesPerHour">Miles/Hour</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="trello">Trello</string>


    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">Collaborate and Plan Together Across Multiple Devices on Projemanag’s Minimalist Interface.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <!--    <string name="please_wait">Please Wait&#8230;</string>-->

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>

    <string name="no_boards_are_available">No Boards are available!!!</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>

    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>

    <string name="str_select_member">Select Member</string>
    <string name="default_notification_channel_id">trelloclone_notification_channel_id</string>


    <string name="google_maps_api_key">A</string>

    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>

    <string name="note_text_no_happy_places_found_yet_kindly_add_one">No Happy Places Found Yet. Kindly add one.</string>
    <string name="image_content_description">image</string>

    <string name="btn_text_view_on_map">VIEW ON MAP</string>
    <string name="add_place_select_current_location_text">SELECT CURRENT LOCATION</string>
    <string name="no_happy_places_found_yet">No Happy Places Found Yet</string>

</resources>