<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".quizapp.QuizQuestionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">
        
        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="#363A43"
            android:text="@string/what_country_does_this_flag_belongs_to">
        </TextView>
        
        <ImageView
            android:id="@+id/questionImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/quiz_image"
            android:src="@drawable/ic_flag_of_germany">
            
        </ImageView>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_weight="1"
                android:max="10"
                android:indeterminate="false"
                android:minHeight="50dp"
                android:progress="0">

            </ProgressBar>
            
            <TextView
                android:id="@+id/progressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:textSize="14sp"
                tools:text="0/10">
                
            </TextView>
            
        </LinearLayout>
        
        <TextView
            android:id="@+id/optionOneTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="#7A8089"
            android:textSize="18sp"
            android:text="@string/apple">
            
        </TextView>

        <TextView
            android:id="@+id/optionTwoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="#7A8089"
            android:textSize="18sp"
            android:text="@string/apple">

        </TextView>

        <TextView
            android:id="@+id/optionThreeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="#7A8089"
            android:textSize="18sp"
            android:text="@string/apple">

        </TextView>

        <TextView
            android:id="@+id/optionFourTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:padding="15dp"
            android:textColor="#7A8089"
            android:textSize="18sp"
            android:text="@string/apple">

        </TextView>
        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">
            
        </Button>
        
    </LinearLayout>
    
    

</ScrollView>