<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".workoutapp.BMIActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarBmiActivity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white" />


    <RadioGroup
        android:id="@+id/unitsRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarBmiActivity"
        android:layout_margin="10dp"
        android:background="@drawable/radio_group_tab_background"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.50"
            android:background="@drawable/units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="METRIC UNITS"
            android:textColor="@drawable/units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbUsUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.50"
            android:background="@drawable/units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="US UNITS"
            android:textColor="@drawable/units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>
    
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/metricUnitWeightTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_toStartOf="@id/view"
        app:boxStrokeColor="@color/darkGreen"
        app:hintTextColor="@color/darkGreen"
        android:layout_below="@+id/unitsRG"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/metricUnitWeightET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_in_kg"
            android:inputType="numberDecimal"
            android:textSize="16sp"/>
        
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/metricUnitHeightTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/darkGreen"
        app:hintTextColor="@color/darkGreen"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@+id/metricUnitWeightTIL">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/metricUnitHeightET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_in_cm"
            android:inputType="numberDecimal"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usMetricUnitWeightTIL"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/darkGreen"
        app:hintTextColor="@color/darkGreen"
        android:layout_below="@id/unitsRG"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/usMetricUnitWeightET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="WEIGHT (in kg)"
            android:inputType="numberDecimal"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/metricUnitWeightTIL"
        android:id="@+id/metricUsUnitHeightFeetTIL"
        app:boxStrokeColor="@color/darkGreen"
        app:hintTextColor="@color/darkGreen"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentStart="true"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_toStartOf="@id/view"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/usMetricUnitHeightFeetET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Feet"
            android:inputType="numberDecimal"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_below="@+id/unitsRG"
        android:layout_centerHorizontal="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/metricUnitWeightTIL"
        android:id="@+id/metricUsUnitHeightInchTIL"
        app:boxStrokeColor="@color/darkGreen"
        app:hintTextColor="@color/darkGreen"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/view"
        android:visibility="gone"
        tools:visibility="visible"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/usMetricUnitHeightInchET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Inch"
            android:inputType="numberDecimal"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>
    
    
    <LinearLayout
        android:padding="10dp"
        android:layout_below="@id/metricUnitHeightTIL"
        android:id="@+id/displayBMIResultLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:id="@+id/yourBMITV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/your_bmi"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bmiValueTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="15.00" />

        <TextView
            android:id="@+id/bmiTypeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="Normal" />

        <TextView
            android:id="@+id/bmiDescriptionTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textSize="18sp"
            tools:text="Normal" />
    </LinearLayout>
    
    <Button
        android:layout_margin="10dp"
        android:layout_below="@id/displayBMIResultLL"
        android:id="@+id/calculateUnitsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/calculate"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
        
</RelativeLayout>